# ks-qnm-spectral-residual-workflow

./: .gitignore  README.md  epj_submission_checklist.md  pyproject.toml  pytest.ini
data/literature/: konoplya2020_scalar_l0_table.csv  ks_qnm_literature_template.csv
docs/: LITERATURE_NORMALIZATION_PROTOCOL.md
outputs/results/: branch_sensitivity_classes.csv  branch_sensitivity_correlations.csv  branch_sensitivity_predictor_search.csv  branch_sensitivity_report.md  catalogue_physics_summary.csv  catalogue_physics_trends.csv  convergence_results.csv  convergence_table.csv  exploratory_spectral_results.csv  konoplya2020_scalar_l0_comparison.csv  leaver_comparison.csv  n128_spot_check.csv  n128_spot_check_report.md  prl_discovery_hunt_report.md  prl_instability_assessment.md  prl_instability_barrier_metrics.csv  prl_instability_branch_verdicts.csv  prl_instability_endpoint_leaver_checks.csv  prl_instability_mode_pair_diagnostics.csv  prl_instability_scan_summary.csv  prl_instability_window_sensitivity.csv  qnm_catalogue.csv  qnm_catalogue_report.md  qnm_frequency_comparison.csv  run_metadata.json  scalar_l2_pseudospectrum_resolution_check.csv  scalar_l2_pseudospectrum_summary.csv  scalar_pseudospectrum_report.md  spectral_results.csv  (+6 more)
scripts/: analyze_branch_sensitivity.py  analyze_catalogue_physics.py  analyze_pseudospectrum.py  check_n128_spot.py  compare_konoplya2020_scalar_l0.py  prepare_literature_comparison.py  run_catalogue.py  run_hybrid_qnm_algorithm.py  run_prl_instability_scan.py  run_universality_scan.py
src/qnm/: common.py  (+10 more)
tests/: test_qnm_algorithm.py
(+11 files in other folders)
