[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ks-qnm-spectral-residual-workflow"
version = "0.1.0"
description = "Chebyshev-Leaver spectral residual workflow for Kazakov-Solodukhin quasinormal modes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.4.3",
    "scipy==1.17.1",
    "matplotlib==3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
